samples/_failures_safe/1761717120_9f9e27_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_79d88f03.c: In function ‘main’:
./samples/SAFE/__tmp_79d88f03.c:153:20: error: expected ‘;’ at end of input
  153 |         buffer_free
      |                    ^
      |                    ;
./samples/SAFE/__tmp_79d88f03.c:153:9: error: expected declaration or statement at end of input
  153 |         buffer_free
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_79d88f03.c:153:9: error: expected declaration or statement at end of input
